updated eslint to comply with NodeJS ES Modules implementation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,11 @@
         "ecmaVersion": 12
     },
     "rules": {
+        "import/extensions": [
+            "warning",
+            {
+                "js": "always"
+            }
+        ]
     }
 }
