--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1"
+  },
+  "scripts": {
+      "start": "node ./src/index.js"
   }
 }
